Bug 585257 - "Assertion failure: obj == obj2". r=gal.